<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registrar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.ucc.iotandroid.registrarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/r_txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/r_nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/r_txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_usuario"
                android:inputType="text" />
            <EditText
                android:id="@+id/r_txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/r_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="text" />
            <Button
                android:id="@+id/r_btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/registrar" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
