<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.ucc.iotandroid.ControlActivity">

    <Button
        android:id="@+id/Csala"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/sala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Croom2"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/room2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/Cbano"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="-39dp"
        android:layout_marginTop="8dp"
        android:hint="@string/baño"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Croom1"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/room1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="H"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
